Modify and delete working

--- a/app/index.html
+++ b/app/index.html
@@ -48,10 +48,12 @@
 <script src="app-states.js"></script>
 <script src="components/pokemon/pokemon-module.js"></script>
 <script src="components/pokemon/pokemon-directive.js"></script>
+<script src="components/pokemon/pokemon-service.js"></script>
 <script src="components/pokemon/pokemon-controller.js"></script>
 <script src="myPokemons/my-pokemons-module.js"></script>
 <script src="myPokemons/my-pokemons-service.js"></script>
 <script src="myPokemons/my-pokemons-states.js"></script>
+<script src="myPokemons/my-pokemons-filter.js"></script>
 <script src="myPokemons/my-pokemons-controller.js"></script>
 </body>
 </html>
