Type modal working.

--- a/app/myPokemons/my-pokemons-tpl.html
+++ b/app/myPokemons/my-pokemons-tpl.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Pokemons</title>
-</head>
-<body>
 <h2>My pokemon list</h2>
 <div class="row">
     <div class="col-xs-12">
@@ -15,7 +9,7 @@
                         <span>Nombre</span>
                     </div>
                     <div class="col-xs-2">
-                        <span>Tipo</span>
+                        <span>Tipos</span>
                     </div>
                     <div class="col-xs-4">
                         <span>Descripci&oacute;n</span>
@@ -47,5 +41,6 @@
                  pokemon-delete="myCtrl.deletePokemon(name)"></pokemon>
     </div>
 </div>
-</body>
-</html>
+<div class="row">
+    <div class="col-xs-12" id="modalÇontainer"></div>
+</div>
