--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href="myPokemons/my-pokemons.css">
+    <link rel="stylesheet" href="components/pokemon/modal/types.css">
     <link rel="stylesheet" href="components/pokemon/pokemon.css">
     <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="bower_components/angular-ui-notification/dist/angular-ui-notification.min.css">
@@ -45,6 +46,8 @@
 <script src="app-config.js"></script>
 <script src="app-constants.js"></script>
 <script src="app-states.js"></script>
+<script src="components/pokemon/modal/types-module.js"></script>
+<script src="components/pokemon/modal/types-controller.js"></script>
 <script src="components/pokemon/pokemon-module.js"></script>
 <script src="components/pokemon/pokemon-directive.js"></script>
 <script src="components/pokemon/pokemon-service.js"></script>
